Moving *.js to js/     Moving *.png image/
	new file:   image/oct.png
	modified:   index.html
	new file:   js/d3.v3.min.js
	new file:   js/hexbin.js
	deleted:    d3.v3.min.js
	deleted:    hexbin.js
	deleted:    oct.png

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   <svg id="mySvg" width="0" height="0">
     <defs id="mdef">
       <pattern id="image" x="-64" y="-48" height="96" width="129" patternUnits="userSpaceOnUse">
-        <image x="0" y="0" width="129" height="96" xlink:href="oct.png"></image>
+        <image x="0" y="0" width="129" height="96" xlink:href="/image/oct.png"></image>
       </pattern>
     </defs>
   </svg>
-<script src="d3.v3.min.js"></script>
-<script src="hexbin.js"></script>
+<script src="/js/d3.v3.min.js"></script>
+<script src="/js/hexbin.js"></script>
 <script>
 
 var w = window,
